1.4.3:
-Added Ethereum Classic Bittrex market
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.4:
-Added Ethereum Classic Kraken market
-Reduced STEEM Power Interest calculator to 3 month estimate maximum
-Fixed bugs when toggling the cookies settings on / off
-Optimized the configuration file format, to reduce uneeded clutter
-Other minor optimizations
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.5:
-Modularized content sections and libraries
-Used better semantics for naming modules
-Cleaned up code nesting / separation
-Added Ethereum Classic Bitfinex market
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.6:
-Cleaned up underperforming markets
-Reorganized markets
-Added additional Cryptofresh markets
-Added LBRY (LBC) markets
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.7:
-Reorganized markets
-Added AEON Market
-Fixed per-coin BTC value to USD. Was only using coinbase to get USD value, now it uses whichever USD market you chose for BTC for all coin subtotals.
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.8:
-Added REP Markets
-Added Shadowcash Markets
-Removed LBRY Markets
-Removed AEON Markets
-Adjusted STEEM interest calculator to match real-world results closer
-------------------------------------------------------------------

-------------------------------------------------------------------
1.4.9:
-Added stats tab, and stat / chart links
-------------------------------------------------------------------

























