@@ -6,21 +6,33 @@
 
 ?>
 
-<p style=''>
+<p>
+    <fieldset><legend> Coinmarketcap.com </legend>
     <ul>
         
-        <li class='chart_links'><a href='http://coinmarketcap.com/' target='_blank'>Top Marketcaps (coinmarketcap.com)</a></li>
+        <li class='chart_links'><a href='http://coinmarketcap.com/' target='_blank'>Top Marketcaps</a></li>
         
-        <li class='chart_links'><a href='http://coinmarketcap.com/currencies/volume/24-hour/' target='_blank'>Top 24 Hour Volumes (coinmarketcap.com)</a></li>
+        <li class='chart_links'><a href='http://coinmarketcap.com/currencies/volume/24-hour/' target='_blank'>Top 24 Hour Volumes</a></li>
         
-        <li class='chart_links'><a href='http://coinmarketcap.com/currencies/volume/monthly/' target='_blank'>Top Monthly Volumes (coinmarketcap.com)</a></li>
+        <li class='chart_links'><a href='http://coinmarketcap.com/currencies/volume/monthly/' target='_blank'>Top Monthly Volumes</a></li>
         
-        <li class='chart_links'><a href='http://coinmarketcap.com/gainers-losers/' target='_blank'>Top Gainers and Losers (coinmarketcap.com)</a></li>
+        <li class='chart_links'><a href='http://coinmarketcap.com/gainers-losers/' target='_blank'>Top Gainers and Losers</a></li>
         
-        <li class='chart_links'><a href='http://coinmarketcap.com/new/' target='_blank'>Newest Assets (coinmarketcap.com)</a></li>
+        <li class='chart_links'><a href='http://coinmarketcap.com/new/' target='_blank'>Newest Assets</a></li>
         
-        <li class='chart_links'><a href='http://coinmarketcap.com/charts/' target='_blank'>Global Market Caps (coinmarketcap.com)</a></li>
+        <li class='chart_links'><a href='http://coinmarketcap.com/charts/' target='_blank'>Global Market Caps</a></li>
         
     </ul>
-    
+    </fieldset>
+</p>
+
+<p>
+    <fieldset><legend> Miscellaneous </legend>
+    <ul>
+        
+        <li class='chart_links'><a href='https://bitcoinwisdom.com/' target='_blank'>Bitcoinwisdom.com</a></li>
+        
+        
+    </ul>
+    </fieldset>
 </p>
